--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 
 script:
  - dotnet build
- - dotnet test tests/RestaurantApi.UnitTests.csproj
+ - dotnet test tests/RestaurantApi.IntegrationTests.csproj
